# Air-Book-backend

./: .bandit.yaml  .env  .flake8  .gitignore  .prettierrc  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  main.py  pyproject.toml  requirements.txt  test  tsconfig.json  typedoc.json
.github/workflows/: fastapi-version_dfghdfghdfghfdg.yml  node-version_airbook.yml  node-version_sdafsdfsdf.yml
docker/: backend.Dockerfile  init-neo4j.sh  mysql.Dockerfile  neo4j.Dockerfile  prometheus.yml  promtail-config.yaml
docker/dashboards/: dashboard.json  k6-dashboard.json
env/: .env.docker  .env.github  .env.json  .env.local
postman/: Air-Book.postman_collection.json  Air-Book.postman_environment.json
src/: app.js  main.py
src/common/: dependencies.py  exceptions.py
src/config/: allowedOrigins.js  allowedRoutes.js  db.js  rolesList.js
src/controllers/: airportController.js  flightController.js  healthCheckController.js  loginController.js  logoutController.js  oauth2Controller.js  refreshTokenController.js  registerController.js
src/core/: config.py  database.py  logger.py  middleware.py
src/middlewares/: credentials.js  logger.js  verifyJWT.js  verifyRoles.js
src/routes/: airport.js  flight.js  healthCheck.js  login.js  logout.js  oauth2.js  refreshToken.js  register.js  user.js
src/swagger/: airport.yaml  flight.yaml  healthCheck.yaml  login.yaml  logout.yaml  refreshToken.yaml  register.yaml  swagger.yaml  user.yaml
src/utils/: generateToken.js  token_manager.py
src/validations/: userValidation.js
(+12 files in other folders)
